# Nutmeg

./: .editorconfig  .gitignore  Cargo.toml  README.md  README.org  build.rs  diesel.toml  meson.build  org.gnome.Hoctane.json  org.gnome.Nutmeg.json
.github/workflows/: release.yml
data/: meson.build  org.gnome.Hoctane.desktop.in  org.gnome.Hoctane.gschema.xml  org.gnome.Hoctane.metainfo.xml.in  org.gnome.Hoctane.service.in  org.gnome.Nutmeg.desktop.in  org.gnome.Nutmeg.gschema.xml  org.gnome.Nutmeg.metainfo.xml.in  org.gnome.Nutmeg.service.in
data/icons/: meson.build
migrations/2026-01-31-000000_create_teams/: up.sql
migrations/2026-02-01-094000_create_players_table/: up.sql
migrations/2026-02-01-100000_create_reference_tables/: down.sql  up.sql
migrations/2026-02-01-110000_create_lang_currency_tables/: down.sql  up.sql
migrations/2026-02-01-140000_append_only_schema/: down.sql  up.sql
migrations/2026-02-02-120000_add_detailed_world_data/: down.sql  up.sql
migrations/2026-02-02-180000_add_flag_to_countries/: down.sql  up.sql
migrations/2026-02-04-090000_add_new_player_fields/: up.sql
migrations/2026-02-04-120000_complete_append_only/: up.sql
migrations/2026-02-04-184500_create_download_entries/: down.sql  up.sql
migrations/2026-02-11-153000_add_download_id_to_remaining_tables/: down.sql  up.sql
migrations/2026-02-11-170000_add_avatar_to_players/: down.sql  up.sql
migrations/2026-02-11-180000_add_gender_and_league_system/: down.sql  up.sql
migrations/2026-02-11-190000_remove_sticker_rename_specialty/: down.sql  up.sql
migrations/2026-02-11-200000_create_avatars_table/: down.sql  up.sql
migrations/2026-02-15-120000_create_matches_and_league_units/: down.sql  up.sql
migrations/2026-02-18-181500_create_staff_table/: up.sql
migrations/2026-02-21-000000_add_match_context_id_to_matches/: up.sql
migrations/2026-02-21-100000_composite_pks/: down.sql  up.sql
migrations/2026-02-21-200000_add_indexes/: down.sql  up.sql
migrations/2026-02-21-300000_fix_currency_rate_type/: down.sql  up.sql
migrations/2026-03-03-161000_create_match_ratings/: down.sql  up.sql
migrations/2026-03-07-120000_fix_staff_composite_pk/: down.sql  up.sql
migrations/2026-03-07-200000_add_user_flags/: down.sql  up.sql
migrations/2026-03-07-210000_populate_user_flags/: down.sql  up.sql
migrations/2026-03-09-000000_add_download_id_to_match_ratings/: down.sql  up.sql
migrations/2026-03-13-182000_add_season_to_league_unit_teams/: down.sql  up.sql
po/: LINGUAS  POTFILES.in  fr.po  ga.po  meson.build
src/: application.rs  config.rs  config.rs.in  error.rs  hoctane.gresource.xml  main.rs  meson.build  nutmeg.gresource.xml  player_display.rs  setup_window.rs  setup_window.ui  style.css  window.rs  window.ui
src/chpp/: authenticator.rs  client.rs  error.rs  metadata.rs  mod.rs  model.rs  oauth.rs  request.rs  (+4 more)
(+89 files in other folders)
