[package]
name = "nutmeg"
version = "0.1.0"
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.10", package = "gtk4", features = ["gnome_47"] }
tokio = { version = "1.49", features = ["full"] }
dotenvy = "0.15"
reqwest = { version = "0.13", features = ["blocking", "json"] }
oauth-1a = { git = "https://github.com/tychobrailleur/oauth-1a.git" }
http-types = "2.12.0"
thiserror = "1.0"
log = "0.4.28"
env_logger = "0.11"
open = "4.1.0"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.149"
diesel = { version = "2.2.0", features = ["sqlite", "r2d2", "chrono", "64-column-tables"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
async-trait = "0.1"
chrono = "0.4"
oo7 = "0.3"
gdk-pixbuf = "0.21"

[dependencies.adw]
package = "libadwaita"
version = "0.8"
features = ["v1_2"]

[dependencies.uuid]
version = "1.18"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
serial_test = "3.2"

[build-dependencies]
glib-build-tools = "0.19"
